objects/Feedback__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Attendee who provided the feedback</description>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>