objects/Feedback__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Registration record tied to this feedback submission</description>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>