objects/Feedback__c/fields/Venue_Rating__c.field-meta.xml
<CustomField>
    <fullName>Venue_Rating__c</fullName>
    <description>Rating for venue facility and comfort from 1 to 5</description>
    <label>Venue Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>