objects/Feedback__c/validationRules/No_Feedback_Before_Event_Ends.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Feedback_Before_Event_Ends</fullName>
    <active>true</active>
    <description>Ensures feedback cannot be submitted before the event has concluded.</description>
    <errorConditionFormula>Registration__r.Event__r.End_Date_Time__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Overall_Rating__c</errorDisplayField>
    <errorMessage>Feedback cannot be submitted before the event has ended.</errorMessage>
</ValidationRule>